--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
@@ -30,3 +31,17 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
+
+jacoco {
+    toolVersion = '0.8.3'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+        xml.destination "${buildDir}/reports/jacoco/report.xml"
+    }
+}
+
+check.dependsOn jacocoTestReport
