--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ matrix:
     - language: java
       before_script:
         - cd backend
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
