--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,9 @@
   },
   "devDependencies": {
     "codecov": "^3.5.0",
-    "node-sass": "^4.12.0"
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
+    "node-sass": "^4.12.0",
+    "react-test-renderer": "^16.8.6"
   }
 }
