--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-copy-write": "^0.8.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-waterfall": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
