--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.7",
     "@material-ui/core": "^4.1.0",
     "@material-ui/icons": "^4.1.0",
+    "@material-ui/pickers": "^3.1.1",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "date-fns": "next",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-copy-write": "^0.8.0",
